--- a/projects/index.html
+++ b/projects/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 
 <html lang="en">
-	<head>
+    <head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>CV | Atilla Bosma</title>
+		<title>Projects | Atilla Bosma</title>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
 		<link rel="stylesheet" href="stylesheet.css">
@@ -16,19 +16,21 @@
 		<meta property="og:type" content="website">
 		<meta name="og:image" itemprop="image" content="../Icons/favicon.png">
 	</head>
-</html>
-
-<body>
-	<div class="top">
-		<div class="top-links">
-			<h1 class="home-link">CV</h1>
-			<div class="links">
-				<a href="/">Home</a>
-				<a href="/projects">Projects</a>
+    <body>
+        <div class="top">
+			<div class="top-links">
+				<h1 class="home-link">Projects</h1>
+				<div class="links">
+                    <a href="/">Home</a>
+					<a href="/cv">CV</a>
+				</div>
 			</div>
+			<hr>
 		</div>
-		<hr>
-		<h3><a href="CV.pdf">Download PDF</a></h3>
-		<img id="CVImage" src="CV.png"></img>
-	</div>
-</body>
+        <div class="main">
+            <p class="subheading">
+				TODO: Add projects here.
+			</p>
+        </div>
+    </body>
+</html>
