--- a/index.html
+++ b/index.html
@@ -2,34 +2,44 @@
 
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<title>Atilla Bosma | Back-end Software Developer</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Personal Website | Atilla Bosma</title>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
 		<link rel="stylesheet" href="stylesheet.css">
-		<link rel="icon" type="image/png" href="Icons/favicon.png">
-		<meta property="og:site_name" content="Name of your website">
+		<link rel="icon" type="image/png" href="../Icons/favicon.png">
+		<meta property="og:site_name" content="AtillaBosma's Homepage">
 		<meta property="og:url" content="https://abosma.com">
 		<meta property="og:title" content="AtillaBosma's Homepage">
 		<meta property="og:description" content="Atilla Bosma's personal page of fun and mystery">
 		<meta property="og:type" content="website">
-		<meta name="og:image" itemprop="image" content="Icons/favicon.png">
+		<meta name="og:image" itemprop="image" content="../Icons/favicon.png">
 	</head>
 
 	<body>
-		<main>
+		<div class="top">
+			<div class="top-links">
+				<h1 class="home-link">Home</h1>
+				<div class="links">
+					<a href="/projects">Projects</a>
+					<a href="/cv">CV</a>
+				</div>
+			</div>
+			<hr>
+		</div>
+		<div class="main">
 			<h3 class="introduction">Hey, my name is</h3>
 			<h1 class="name">Atilla Bosma</h1>
 			<p class="subheading">
 				I'm a recently graduated Software Developer specialized in back-end<br/> 
 				programming, currently in the progress of learning front-end design.<br/><br/>
 				Most recent personal projects involve toying with <a href="https://www.redblobgames.com/maps/terrain-from-noise/">World Generation</a><br/> 
-				and <a href="https://www.youtube.com/watch?v=7axImc1sxa0">Universe Simulation</a> in Unity. <br/><br/>
+				and <a href="https://www.youtube.com/watch?v=7axImc1sxa0">Universe Simulation</a> in Unity.<br/><br/>
 				I recently got hired as an IT Consultant, and I'm not looking for a new project currently.<br/>
-				Thank you to all the recruiters for helping me find a job!<br/><br/>
-				If you are still interested in looking at my CV, you can find it <a href="/cv">here.</a>
+				Thank you to all the recruiters for helping me find a job!
 			</p>
-		</main>
+		</div>
 		<div class="social-media">
 			<h3><a href="mailto:atillabosma@hotmail.com">e-mail</a></h3>
 			<h3><a href="https://www.linkedin.com/in/atilla-bosma/">linkedin</a></h3>
