--- a/celauto/index.html
+++ b/celauto/index.html
@@ -2,12 +2,13 @@
 
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Cellular Automata | Atilla Bosma</title>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
 		<link rel="stylesheet" href="stylesheet.css">
-		<link rel="icon" type="image/png" href="Icons/favicon.png">
+		<link rel="icon" type="image/png" href="../Icons/favicon.png">
 		<meta property="og:site_name" content="AtillaBosma's Homepage">
 		<meta property="og:url" content="https://abosma.com">
 		<meta property="og:title" content="AtillaBosma's Homepage">
@@ -18,10 +19,6 @@
 
 	<body>
         <canvas id="canvas"></canvas>
-
-		<script src="./scripts/input_handler.js"></script>
-		<script src="./scripts/pixel_handler.js"></script>
-		<script src="./scripts/screen_handler.js"></script>
-        <script src="./scripts/game.js"></script>
+		<script src="./game.js" type="module"></script>
 	</body>
 </html>
