--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
 		<link rel="stylesheet" href="stylesheet.css">
-		<link rel="icon" type="image/png" href="../Icons/favicon.png">
+		<link rel="icon" type="image/png" href="../icons/favicon.png">
 		<meta property="og:site_name" content="AtillaBosma's Homepage">
 		<meta property="og:url" content="https://abosma.com">
 		<meta property="og:title" content="AtillaBosma's Homepage">
 		<meta property="og:description" content="Atilla Bosma's personal page of fun and mystery">
 		<meta property="og:type" content="website">
-		<meta name="og:image" itemprop="image" content="../Icons/favicon.png">
+		<meta name="og:image" itemprop="image" content="../icons/favicon.png">
 	</head>
 
 	<body>
