--- a/idleclicker/index.html
+++ b/idleclicker/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
   		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Typescript Test | Atilla Bosma</title>
+		<title>stupid clicker | Atilla Bosma</title>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
 		<link rel="stylesheet" href="stylesheet.css">
