--- a/tstest/index.html
+++ b/tstest/index.html
@@ -1,24 +1,27 @@
 <!doctype html>
 
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-  		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Typescript Test | Atilla Bosma</title>
-		<meta name="description" content="homepage">
-		<meta name="author" content="AtillaBosma">
-		<link rel="stylesheet" href="stylesheet.css">
-		<link rel="icon" type="image/png" href="../icons/favicon.png">
-		<meta property="og:site_name" content="AtillaBosma's Homepage">
-		<meta property="og:url" content="https://abosma.com">
-		<meta property="og:title" content="AtillaBosma's Homepage">
-		<meta property="og:description" content="Atilla Bosma's personal page of fun and mystery">
-		<meta property="og:type" content="website">
-		<meta name="og:image" itemprop="image" content="../icons/favicon.png">
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Typescript Test | Atilla Bosma</title>
+    <meta name="description" content="homepage" />
+    <meta name="author" content="AtillaBosma" />
+    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="icon" type="image/png" href="../icons/favicon.png" />
+    <meta property="og:site_name" content="AtillaBosma's Homepage" />
+    <meta property="og:url" content="https://abosma.com" />
+    <meta property="og:title" content="AtillaBosma's Homepage" />
+    <meta
+      property="og:description"
+      content="Atilla Bosma's personal page of fun and mystery"
+    />
+    <meta property="og:type" content="website" />
+    <meta name="og:image" itemprop="image" content="../icons/favicon.png" />
+  </head>
 
-	<body>
-        <canvas id="canvas" width="1280" height="720"></canvas>
-		<script src="./game.js" type="module"></script>
-	</body>
+  <body>
+    <canvas id="canvas" width="1280" height="720"></canvas>
+    <script src="./game.js" type="module"></script>
+  </body>
 </html>
